namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: evennia
  labels:
    istio.io/dataplane-mode: ambient
