service.yaml
apiVersion: v1
kind: Service
metadata:
  name: evennia
  namespace: evennia
  labels:
    app: evennia
spec:
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31314
      name: http
    - port: 4000
      targetPort: 4000
      nodePort: 31313
      name: telnet
  selector:
    app: evennia
  type: NodePort
