httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: evennia
  namespace: evennia
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: cloudflare-tunnel
    namespace: cloudflare-gateway
  hostnames:
  - "dorfin.johnasendorf.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: evennia
      port: 80
      weight: 1
